--- a/diary/templates/diary/diary_page.html
+++ b/diary/templates/diary/diary_page.html
@@ -1,29 +1,32 @@
 <html>
-  <head>
-  </head>
-  <body>
-  	<div align="center">
-    		
-  	{% if diary_owner %}
-      <p align="center">
-      <a href="{{ url }}">{{ url_linktext }}</a>
-    	  </p>
-		{{ diary.author }}
-    
-    	  {% if diary.author %}
-	      <b>
-	      	Date : {{ diary.date }}, Weather : {{ diary.weather }}
-	      </b>
-	      <blockquote>{{ diary.content|escape }}</blockquote>
-    	  {% endif %}
-	  <p>
-	    <form action="/writer/" method="post">
-	      {% csrf_token %}
-	      <input type="hidden" name="diary_owner" value="{{ diary_owner }}" />
-	      <div><input type="submit" value="Go to post diary"></div>
-	    </form>
-	  </p>
-    {% endif %}
-   </div>
-  </body>
+	<head>
+		<title>{{ diary_author }}'s Diary - Read diary</title>
+	</head>
+	<body>
+		<div align="center">
+			{% if diary_owner %}
+			<p align="center">
+				<h1>{{ diary_author }}'s Diary</h1>
+				<a href="{{ url }}">{{ url_linktext }}</a>
+			</p>
+			{% for d in diaries %}
+			{% if d.author %}
+			<b> Date : {{ d.date }}, Weather : {{ d.weather }} </b>
+			<blockquote>
+				{{ d.content|escape }}
+			</blockquote>
+			{% endif %}
+			{% endfor %}
+			<p>
+				<form action="/writer/" method="post">
+					{% csrf_token %}
+					<input type="hidden" name="diary_owner" value="{{ diary_owner }}" />
+					<div>
+						<input type="submit" value="Go to post diary">
+					</div>
+				</form>
+			</p>
+			{% endif %}
+		</div>
+	</body>
 </html>
