--- a/diary/templates/diary/post_page.html
+++ b/diary/templates/diary/post_page.html
@@ -1,22 +1,33 @@
 <html>
-  <head>
-  </head>
-  <body>
-    <p align="center">
-    <a href="{{ url }}">{{ url_linktext }}</a>
-    	</p>
-    	  
-    <form action="/.." method="post">
-      <!-- prevent Cross Site Request Forgeries -->
-      {% csrf_token %}
-      <div align="center">
-	      <input type="hidden" name="diary_owner" value="{{ diary_owner }}" />
-	      <input type="hidden" name="diary_date" value="{{ diary_date }}" />
-	      <div>Date : {{ diary_date }}</div>
-	      <div>Weather : <input type="text" name="weather" /></div>
-	      <div>Content : <br><textarea name="content" rows="24" cols="80"> </textarea></div>
-	      <div><input type="submit" value="Post diary"/></div>
-      </div>
-    </form>
-  </body>
+	<head>
+		<title>{{ diary_author }}'s Diary - Post diary</title>
+	</head>
+	<body>
+		<div align="center">
+			<h1>{{ diary_author }}'s Diary</h1>
+			<a href="{{ url }}">{{ url_linktext }}</a>
+
+			<form action="/.." method="post">
+				<!-- prevent Cross Site Request Forgeries -->
+				{% csrf_token %}
+				<input type="hidden" name="diary_owner" value="{{ diary_owner }}" />
+				<input type="hidden" name="diary_date" value="{{ diary_date }}" />
+				<div>
+					Date : {{ diary_date }}
+				</div>
+				<div>
+					Weather :
+					<input type="text" name="weather" />
+				</div>
+				<div>
+					Content :
+					<br>
+					<textarea name="content" rows="24" cols="80"> </textarea>
+				</div>				
+				<div>
+					<input type="submit" value="Post diary"/>
+				</div>
+			</form>
+		</div>
+	</body>
 </html>
